--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>KARTING SANTA FE</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Roboto:ital,wght@1,900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Permanent+Marker&display=swap"
     rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -18,7 +18,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">KARTING SANTA FE</a>
+      <a class="navbar-brand" href="#ubicacion">KARTING SANTA FE</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -32,29 +32,29 @@
             <a class="nav-link" href="#nosotros">Nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#nosotros">Servicios</a>
+            <a class="nav-link" href="#carouselExampleCaptions">Testimonios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#nosotros">Productos</a>
-          </li>||
+            <a id="registrate" class="nav-link" href="#contacto">Registrate, así te informás de los Próximos
+              Eventos!!!</a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="container-fluid">
-    <div id="home" class="row align-items-center hero">
-      <div class="col-lg-4 offset-lg-4">
-        <p>Bienvenidos a Karting Santa Fe</p>
-        <h1>Sé el Mejor Piloto!!!</h1>
-        <p>Si tu pasión es la adrenalina de la velocidad en la pista, entonces no dudes y acercate a nostoros, nos
-          encagaremos de enseñarte todo lo necesario para vos y tu kart para que llegues a los mas alto.</p>
-      </div>
+
+  <div id="home" class="row align-items-center hero">
+    <div class="col-lg-4 offset-lg-4">
+      <p>Bienvenidos a Karting Santa Fe</p>
+      <h1>Sé el Mejor Piloto!!!</h1>
+      <p>Si tu pasión es la adrenalina de la velocidad en la pista, entonces no dudes y acercate a nostoros, nos
+        encagaremos de enseñarte todo lo necesario para vos y tu kart para que llegues a los mas alto.</p>
     </div>
   </div>
 
   <div id="menu" class="row may-3">
 
-    <div id="nosotros" class="col-md-3">
+    <div id="nosotros" class="col-md-3 espacio">
       <h2>Nosotros</h2>
       <ul class="quienessomos">
         <li><a href="#" data-bs-toggle="modal" data-bs-target="#entrenamientofisico"><img height="200" width="300"
@@ -321,61 +321,126 @@
     </div>
   </div>
   <div>
-    
-      <div class="col-md-6 offset-md-3">
-        <div class="rounded py-5 testimonios">
-          <h2 class="text-center">Testimonios:</h2>
-          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="true">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="testimonio">
-                  <h5>Exelente atención, sobre todo en la puntualidad para entregar los trabajos.</h5>
-                  <p>Germán Alvarez, Teodelina Santa Fe.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="testimonio">
-                  <h5>Muy buenos productos, recomendable.</h5>
-                  <p>Gisela Cyan, Avellaneda Sanfa Fe.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="testimonio">
-                  <h5>Mucha paciencia con los alumnos, muy buenas técnicas de enseñanza.</h5>
-                  <p>Rafaél, San Rafael Mendoza.</p>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-              data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">AVANZAR</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-              data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">RETROCEDER</span>
-            </button>
-          </div>
+
+    <!--cierra, nosotros, servicios y productos-->
+
+    <!-- ubicación-->
+
+    <div id="ubicacion" class="row align-items-center py-4 container-fluid espacio">
+      <div class="col-lg-8 offset-lg-2">
+        <h2>Ubicación</h2>
+        <div class="mapa">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d763.3003801473503!2d-60.73508199834956!3d-31.663398289575476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a982104d80c5%3A0xd23c87a3f3a0a040!2sAutomovil%20Club%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1680525772306!5m2!1ses-419!2sar"
+            style="border:0;" loading="lazy"></iframe>
         </div>
       </div>
     </div>
-  
-  <footer class="text-center">
-    Sitio creado por: Pablo Molinas 2023.
-  </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
+    <!--cierra Ubicación-->
+
+    <!--inicio del formulario de contacto-->
+    <div id="contacto" class="row align-items-center py-4 container-fluid espacio">
+      <div class="col-lg-8 offset-lg-2">
+        <h2>Registrate</h2>
+        <label for="nombre" class="form-label">Apellido y Nombre</label>
+        <input type="text" class="form-control" id="nombre" placeholder="">
+
+        <div class="mb-3">
+          <label for="direccion" class="form-label">Dirección</label>
+          <input type="text" class="form-control" id="direccion" placeholder="">
+        </div>
+        <div class="mb-3">
+          <label for="telefono" class="form-label">Teléfono</label>
+          <input type="text" class="form-control" id="telefono" placeholder="">
+        </div>
+        <div class="col-12">
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </div>
+      </div>
+    </div>
+
+    <!--fin del formulario de contacto-->
+
+    <div class="col-md-8 offset-md-2 espacio">
+      <div class="rounded py-5 testimonios">
+        <h2 class="text-center">Testimonios:</h2>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="true">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+              aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+              aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+              aria-label="Slide 6"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="testimonio">
+                <h5>Exelente atención, sobre todo en la puntualidad para entregar los trabajos.</h5>
+                <p>Germán Alvarez, Teodelina Santa Fe.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="testimonio">
+                <h5>Muy buenos productos, recomendable.</h5>
+                <p>Gisela Cyan, Avellaneda Sanfa Fe.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="testimonio">
+                <h5>Mucha paciencia con los alumnos, muy buenas técnicas de enseñanza.</h5>
+                <p>Rafaél, San Rafael Mendoza.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="testimonio">
+                <h5>Excelente servicio en los motores, pude mejor mucho mi tiempo de vuelta, gracias.</h5>
+                <p>Julio. Santa Fe capital.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="testimonio">
+                <h5>Ropa de muy buena calidad, recomendable.</h5>
+                <p>Daniel, Paraná Entre Ríos.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="testimonio">
+                <h5>Hola, en éste momento estoy corriendo en Fiat 600, pero mi inicio fue en karting y acá encontré una
+                  excelente base, muchas gracias.</h5>
+                <p>Emanuel, Paraná Entre Ríos.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">AVANZAR</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">RETROCEDER</span>
+          </button>
+        </div>
+      </div>
+    </div>
+
+
+    <footer class="text-center">
+      Sitio creado por: Pablo Molinas 2023.
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
